# death-arena

./: .env.dist  .gitattributes  .gitignore  .rusty-hook.toml  Cargo.toml  DEVELOPMENT.md  README.md  Trunk.toml  build.rs  clippy.toml  index.html  rust-toolchain.toml  setup_dependencies.sh
.github/workflows/: ci.yml  pages.yml  scheduled-audit.yml
assets/textures/: church-ctf-experimental.2dtf  church-ctf.2dtf
assets/textures/arenas/church_ctf_1/: blue-flag.collider  church-front.collider  church-main.collider  church-side.collider  container-1.collider  container-2.collider  excavator.collider  fence-1.collider  fence-2.collider  fence-3.collider  fence-4.collider  fence-lower-1.collider  fence-lower-2.collider  flower-hut.collider  garden-shed.collider  hedge.collider  house1-chimney.collider  house1-fence.collider  house1-part1.collider  house1-part2.collider  house2-main.collider  house2-shed.collider  layout.collider  roadblock-1.collider  shed-1.collider  side-bush.collider  wall-horizontal.collider  wall-vertical.collider
assets/textures/car1/: chassis1.collider
credits/: CREDITS.md
credits/licenses/: Soundimage_IPL.md
scripts/: check_asset_paths.sh  check_ci_workflow.sh  check_debug_leftovers.sh  check_duplicate_comment_blocks.sh  check_effect_multiplier_parity.sh  check_field_commitment_personality.sh  check_git_dep_pinned.sh  check_human_baseline_commitment.sh  check_local_quality.sh  check_match_over_halt_parity.sh  check_match_resource_reset_parity.sh  check_never_ship_lints.sh  check_pages_dist.sh  check_pages_workflow.sh  check_pickup_effect_parity.sh  check_precommit_hook.sh  check_quality_script_coverage.sh  check_rust_docs.sh  check_rust_safety.sh  check_rust_suppressions.sh  check_scheduled_audit_workflow.sh  check_score_tally_parity.sh  check_security_advisories.sh  check_shell_scripts.sh  check_speed_modifier_parity.sh  check_temporary_fix_markers.sh  check_toolchain_pin.sh  check_unused_dependencies.sh  check_wasm_rng_backend.sh  check_workflow_lint.sh  check_wreck_bounty_breakdown.sh  check_wreck_bounty_fold.sh  check_wreck_bounty_self_binding.sh
src/: main.rs
src/app/: mod.rs
src/app/configuration/: mod.rs
src/app/generic/: mod.rs
src/app/init/: default_plugins.rs  mod.rs
src/app/lights/: mod.rs
src/app/physics/: collider.rs  collider_loader.rs  mod.rs
src/app/setup/: mod.rs
src/core/: mod.rs  serde.rs
src/environment/: mod.rs
src/environment/world/: mod.rs
src/environment/world/arena/: mod.rs
src/gameplay/: carry_fatigue.rs  chase_resolve.rs  comeback.rs  escort_resolve.rs  flag_escort.rs  flag_rally.rs  front_runner.rs  hello_world.rs  mod.rs  player.rs  slipstream.rs  wall_scrape.rs
src/gameplay/arena/: loader.rs  mod.rs  music.rs  objects.rs  scene.rs  scene_loader.rs  selection.rs
src/gameplay/combat/: economy.rs  integrity.rs  mod.rs  ram.rs  tests.rs  timers.rs
src/gameplay/ctf/: clock.rs  economy.rs  flag.rs  mod.rs  purse.rs  tests.rs  timers.rs
src/gameplay/main/: mod.rs
src/gameplay/pickup/: collect.rs  mod.rs  spawn.rs  system.rs
src/gameplay/player/: camera.rs  car.rs  mod.rs  movement.rs  movement_tests.rs  sfx.rs
src/gameplay/virtual_player/: ai.rs  discipline.rs  drive.rs  mod.rs  spawn.rs
src/gameplay/virtual_player/ai/: tests.rs
src/gameplay/virtual_player/drive/: tests.rs
src/menu/: mod.rs
src/menu/dealer/: mod.rs  ui.rs
src/menu/game_selection/: mod.rs  ui.rs
src/menu/garage/: mod.rs  ui.rs
src/menu/main/: mod.rs  ui.rs
src/menu/main_menu/: mod.rs  ui.rs
src/menu/settings/: mod.rs  ui.rs
src/ui/: button.rs  constants.rs  layout.rs  mod.rs  prelude.rs  text.rs
