[package]
name = "death-arena"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Webber Takken <webber@takken.io>", "Worempie"]
exclude = [".git/", ".idea/", "dist/", "build/", "assets/", "credits/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
crossbeam = "0.8"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
dotenvy = "0.15.6"
serde = "1.0.147"
bevy = { version = "0.8.1", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "render",
  "png",
  "jpeg",
  "x11"
] }
serde_json = { version = "1.0.87" }
bevy_ecs = { version = "0.8.1" }
bevy_kira_audio = { version = "0.12", features = ["ogg", "mp3"] }
bevy_asset_loader = "0.12"
bevy-inspector-egui = "0.13.0"
bevy_common_assets = { version = "0.3.0", features = ["json"] }
winit = { version = "0.27.5", default-features = false, features = ["x11"] }
image = { version = "0.24", default-features = false }
iyes_loopless = { version = "0.8.0", features = ["bevy-inspector-egui"] }

[dev-dependencies]
# run `cargo test` to enable this
rusty-hook = "0.11"

[build-dependencies]
embed-resource = "1.7.3"

[features]
dev = ["bevy/dynamic"]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

