[package]
name = "death-arena"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Webber Takken <webber@takken.io>", "Worempie"]
exclude = [".git/", ".idea/", "dist/", "build/", "assets/", "credits/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
crossbeam = "0.8"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
serde = "1.0"
bevy = { version = "0.15", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_render",
  "bevy_sprite",
  "bevy_core_pipeline",
  "bevy_state",
  "bevy_ui",
  "bevy_text",
  "png",
  "jpeg",
  "x11",
  "default_font",
] }
ron = "0.8"
serde_json = "1.0"
bevy_kira_audio = { version = "0.22", features = ["ogg", "mp3"] }
bevy_common_assets = { version = "0.12", features = ["json"] }
bevy_rapier2d = { version = "0.29", features = ["enhanced-determinism", "debug-render-2d"] }

[dev-dependencies]
rusty-hook = "0.11"

[build-dependencies]
embed-resource = "1.7.3"

[features]
dev = ["bevy/dynamic_linking"]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.rapier2d]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
