[package]
name = "death-arena"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Webber Takken <webber@takken.io>", "Worempie"]
exclude = [".git/", ".idea/", "dist/", "build/", "assets/", "credits/"]

# getrandom is pulled in transitively (via uuid) and carries no direct `use`; it
# is declared only to pin its `js` feature for the wasm build (see the wasm target
# dependency table below), so cargo-machete must not flag it as unused.
[package.metadata.cargo-machete]
ignored = ["getrandom"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
log = "0.4.29"
dotenvy = "0.15.7"
serde = "1.0.228"
bevy = { version = "0.9.1", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "render",
  "png",
  "jpeg",
  "x11"
] }
ron = { version = "0.7.1" }
serde_json = { version = "1.0.149" }
bevy_kira_audio = { version = "0.13", features = ["ogg", "mp3"] }
bevy_common_assets = { version = "0.4.0", features = ["json"] }
# tempfix: pinned to the exact fork commit (the head of `bevy-0.9` at pin time),
# not the moving branch, so a cargo update cannot silently swap the physics engine
# under an unchanged codebase. Bumping it is a deliberate, reviewed manifest edit.
# Guarded by scripts/check_git_dep_pinned.sh.
bevy_rapier2d = { git = "https://github.com/devil-ira/bevy_rapier", rev = "3fabadc0503835caf1e9dc2be1d4da8825046f92", features = [ "enhanced-determinism", "wasm-bindgen", "debug-render" ] } # version = "0.18.0"

# The browser (wasm32-unknown-unknown) build has no OS entropy source. `rand`
# pulls entropy through `getrandom`, whose default wasm backend is `Unsupported`,
# so `rand::random()` panics at runtime, exactly where the arena loader picks an
# arena the moment a match starts. The `js` feature routes entropy to the
# browser's Web Crypto API so the live GitHub Pages demo runs instead of crashing.
# Only a feature pin on a transitively-present crate, hence the cargo-machete
# ignore below and the scripts/check_wasm_rng_backend.sh guard.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# run `cargo test` to enable this
rusty-hook = "0.11"

[build-dependencies]
embed-resource = "1.8.0"

[features]
dev = []

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.rapier2d]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

